--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="name">Name:</string>
     <string name="count">Count:</string>
     <string name="save">SAVE</string>
+    <string name="error_name_required">Please enter item name</string>
+    <string name="error_count_invalid">Count must be greater than 0</string>
+    <string name="success_item_saved">Item saved successfully</string>
 </resources>
